[package]
name = "booties"
version = "0.1.1"
authors = ["june wilde <jewilde@rosegardencult.com>"]
description = "physics for warmth"
license = "MPL-2.0"
keywords = ["warmth"]
homepage = "https://github.com/rosegardencult/booties"
repository = "https://github.com/rosegardencult/booties"
readme = "README.md"
edition = "2018"

[dependencies]

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]
